# PrimRec

./: .gitignore  README.md  closedExp.pr  fac.pr  plus.pr  precs.pr  preksStrings.cabal  primRec.cabal
app/: Converter.hs  Ex.hs  HOAS.hs  Interpreter.hs  Lexer.hs  Main.hs  Parser.hs  Precs.hs  PrecsGen.hs  Pretty.hs  REPL.hs  REPLHelper.hs  ScopeCheck.hs  Sing.hs  Syntax.hs  Tests.hs  TypeCheck.hs  TypeChecker.hs  Types.hs  UncurryHList.hs  Values.hs
app/Lib/: Ex.hs  Fin.hs  HList.hs  HReader.hs  Nat.hs  Pretty.hs  PrettyHelpers.hs  REPLHelper.hs  SNat.hs  Types.hs  Vector.hs
