cabal-version:      2.4
name:               preksStrings
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Maximilian Hertenstein
maintainer:         max.hertenstein@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable preksStrings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: PrecsGen


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      lens,

    hs-source-dirs:   app
    default-language: Haskell2010
