cabal-version:      3.0
name:               primRec
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Maximilian Hertenstein
maintainer:         max.hertenstein@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable primRec
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:  
                    Lexer
                    ,Parser
                    ,Lib.Vector
                    ,Lib.SNat
                    ,Types
                    ,Lib.HList
                    ,TypeChecker
                    ,ScopeCheck
                    ,Lib.Nat
                    ,Lib.Fin
                    ,Interpreter
                    ,Syntax
                    ,REPL
                    ,REPLHelper
                    ,Lib.PrettyHelpers
                    ,Pretty
                    ,Lib.HReader
                    ,HOAS
                    ,UncurryHList
                    ,Tests


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
                      ,mtl
                      ,parsec
                      ,text
                      ,extra
                      ,repline
                      ,MissingH
                      ,timeit
                      ,exceptions
                      ,QuickCheck
                      ,arithmoi
                      ,hint
                      ,prettyprinter
                      ,lens
                      ,quickcheck-instances
                      
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: 
                -Wall
                -Wcompat
                -fwarn-missing-local-signatures
                -fwarn-incomplete-uni-patterns
                -fno-warn-unticked-promoted-constructors
                -dcore-lint
                -fno-warn-name-shadowing
                -O2
                -fwarn-incomplete-patterns

